tests/unit/default/syntax-error/035-create-table-parens-name-colon-type-params-null-eq.e.t
---- IN ----
+%table(id:decimal(10,2)?=
---- OUT ----
---- ERR ----
syntax: expected <value> after `...al(10,2)?=` instead of EOL at position 26 - at line 1
---- EXIT ----
1
